Fixes, PDF testing1 added, README.md added

--- a/module1/index.html
+++ b/module1/index.html
@@ -21,7 +21,7 @@
             var link = document.createElement( 'link' );
             link.rel = 'stylesheet';
             link.type = 'text/css';
-            link.href = window.location.search.match( /print-pdf/gi ) ? '../../css/print/pdf.css' : '../css/print/paper.css';
+            link.href = window.location.search.match( /print-pdf/gi ) ? '../../css/print/pdf.css' : '../../css/print/paper.css';
             document.getElementsByTagName( 'head' )[0].appendChild( link );
         </script>
     </head>
@@ -32,9 +32,12 @@
                     <section data-background="#111111">
 
                         <h1>Testowanie #1</h1>
+                        <h2>Framework <code>catch2</code></h2>
+
                         <a href="https://coders.school">
                             <img width="500" data-src="../coders_school_logo.png" alt="Coders School" class="plain">
                         </a>
+
                         <h3>Łukasz Ziobroń</h3>
 
                     </section>
@@ -43,7 +46,7 @@
 
                         ## Agenda
 
-                        1. <!-- .element: class="fragment fade-in" --> Framework Catch2
+                        1. <!-- .element: class="fragment fade-in" --> Framework <code>catch2</code>
 
                         </textarea>
                     </section>
