--- a/module2/index.html
+++ b/module2/index.html
@@ -32,9 +32,12 @@
                     <section data-background="#111111">
 
                         <h1>Testowanie #2</h1>
+                        <h2>Framework <code>gtest</code></h2>
+
                         <a href="https://coders.school">
                             <img width="500" data-src="../coders_school_logo.png" alt="Coders School" class="plain">
                         </a>
+
                         <h3>Łukasz Ziobroń</h3>
 
                     </section>
@@ -43,7 +46,7 @@
 
                         ## Agenda
 
-                        1. <!-- .element: class="fragment fade-in" --> Framework GTest
+                        1. <!-- .element: class="fragment fade-in" --> Framework <code>gtest</code>
 
                         </textarea>
                     </section>
